# Whitelist

./: .gitignore  README.md  pyproject.toml
adition/: config.json
migrate/: migrate.py
src/endstone_backuper/: backuper_plugin.py
src/endstone_whitelist/: __init__.py  config.toml  listener.py  plugin.py  whitelist_plugin.py
src/endstone_whitelist/api/: api.py
src/endstone_whitelist/commands/: commands.py  whitelist.py
src/endstone_whitelist/forms/: action.py  ban_action.py  view.py
src/endstone_whitelist/tools/: config_provider.py  whitelist_commands.py
src/endstone_whitelist/types/: storage.py
