[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "endstone_whitelist"
version = "0.3.0"
dependencies = [
    "flask",
    "ujson"
]

[project.optional-dependencies]
dev = ["endstone", "ruff"]

[project.entry-points."endstone"]
whitelist = "endstone_whitelist:WhitelistPlugin"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "E", "F"]